--- a/pages/getting-started.mdx
+++ b/pages/getting-started.mdx
@@ -1,4 +1,7 @@
-# Getting started
+import Layout from '../components/Layout';
+export { getStaticProps } from '../config/fn';
+
+# Getting Started
 
 Add **rn-material** to your project in < 1 minute.
 
@@ -64,3 +67,5 @@ Refer to the [Theming](/guides/theming) documentation for more information.
 If you have any questions, contact [@yamankatby](https://twitter.com/yamankatby) on Twitter
 or [start a discussion on GitHub](https://github.com/yamankatby/rn-material/discussions). In case of bugs or feature
 requests, please [open an issue on GitHub](https://github.com/yamankatby/rn-material/issues).
+
+export default props => <Layout {...props} />;
